# Panopticon

./: .gitignore  README.md  SUMMARY.md  TESTING_RESULTS.md  TEST_RESULTS.md  WORKFLOW_UPDATE.md  image_gen.py  implement.md  index.html  package-lock.json  package.json  plan.md  remote_work_blog_post.md  spec.md  tailwind.config.js  tsconfig.tsbuildinfo
backend/: .question_asked  DELEGATION_ARCHITECTURE.md  TESTING_GUIDE.md  activity_callbacks.py  agents.yaml  crew.py  delegation_plan.yaml  delegation_plan_content_template.yaml  delegation_plan_development_template.yaml  delegation_plan_research_template.yaml  delegation_rules.md  events.py  gate_policy.py  gating_rules.md  graph.py  leader_rules.md  llm_wrapper.py  main.py  planner.py  pyproject.toml  requirements.txt  tasks.yaml  test_basic_functionality.py  test_delegation.py  test_delegation_planning.py  test_e2e.py  test_e2e_flow.py  test_end_to_end.py  test_event_timing.py  test_fast_async.py  test_fixed_delegation_plan.py  test_full_crew.py  test_imports.py  test_model.py  test_parallel.py  test_parallel_execution.py  test_planner.py  test_planner_interactive.py  test_quick_check.py  test_simple_parallel.py  (+3 more)
backend/renewable-energy-backend/: .env.example  .gitignore  package.json  server.js
backend/renewable-energy-backend/config/: config.js
backend/renewable-energy-backend/controllers/: benefitsController.js  categoryController.js
backend/renewable-energy-backend/middleware/: errorHandler.js  rateLimiter.js  validator.js
panopticon/: README.md  pyproject.toml
panopticon/src/panopticon/: crew.py  (+1 more)
(+92 files in other folders)
