[project]
name = "panopticon"
version = "0.1.0"
description = "panopticon using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
panopticon = "panopticon.main:run"
run_crew = "panopticon.main:run"
train = "panopticon.main:train"
replay = "panopticon.main:replay"
test = "panopticon.main:test"
run_with_trigger = "panopticon.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
